Make --simd --parallel a hard error without jdk.incubator.vector, not a 100x fallback
`java -jar` without --add-modules jdk.incubator.vector degraded --simd to the
scalar vec:/linalg: kernels with a one-line warning, same as --blas/--gpu with no
library/device. For --parallel that degrade is the wrong shape: it splits the
now-scalar kernels across threads instead of accelerating them, a ~100x slowdown
from the native kernel that reads as a hang under a long-running program's own
output -- .todo/700 lost an hour to the warning scrolling off under an LLM decode
loop's load line. --parallel is asked for only by someone about to run something
large, and unlike a compiled .class output (which may run on a different,
module-equipped JVM later, so JvmSimdModuleFallbackTest keeps it degrading there),
the interpreter's own process IS the machine it runs on -- it can refuse instead of
guessing. Plain --simd keeps the existing degrade-with-a-warning.

Add-Modules is not a manifest attribute the java launcher honours for -jar (checked
empirically: a jar with one in its manifest still throws ClassNotFoundException),
ruling out the item's second option.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TdR8mJpfD1G1cYohqiDD4K